--- a/style.css
+++ b/style.css
@@ -1,4 +1,76 @@
-header {
-background-color: rgb(73, 73, 211);
-color:white;
+*{
+    padding: 0;
+    margin: 0;
 }
+body {
+    font-family: sans-serif;
+}
+.cabecalho{
+    background-color: #8196f1;
+    color: black;
+    padding:0px 0px;
+    font-size: 20px;
+    justify-content: space-around;
+    display: flex;
+}
+.cabecalho-imagem { 
+    width: 250px;
+    height: 250px;
+}
+.cabecalho-lista-item {
+    display: inline-block;
+    padding: 24px;
+    margin: 24px;
+}
+.trilha{
+    background-image: linear-gradient(#e2d5df,#e7dbe5);
+    color: rgb(39, 38, 38);
+    font-size: 21px;
+    padding: 20px 100px;
+}
+.trilha-titulo{
+    padding: 24px 0px;
+}
+.trilha-foto{
+    width: 120px;
+    color: rgb(20, 20, 20);
+    padding: 0px;
+}
+.trilha-div {
+    text-align: center;
+    background-image: #cdccdd;
+    color: rgb(14, 13, 13);
+    font-size: 21px;
+    margin-right: auto;
+    padding: 50px 50px
+}
+.trilha-titulo{
+    text-align: center;
+    background:#6d76f6;
+    padding: 40px;
+
+}
+.trilha-todos{
+    display: grid;
+    grid-template-columns: 20% 20%  20%  20% 20%;
+    background: #4f4e96;
+    padding: 0px;
+}
+.trilha-legenda{
+    padding: 20px;
+    text-align: center;
+}
+
+.Rodape-imagem{
+    width: 40px;
+    height: 40px;
+    padding: 0px;
+}        
+.Rodape{
+    background-color: rgb(148, 149, 226);
+    color: #161212;
+    text-align: center;
+   }
+  
+
+  
